workspace-sf/force-app/main/default/objects/Mensageria__mdt/Mensageria__mdt.object-meta.xml
<CustomObject>
    <label>Mensageria</label>
    <pluralLabel>Mensagerias</pluralLabel>
</CustomObject>