workspace-sf/force-app/main/default/objects/Mensageria__mdt/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <label>Código</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>