workspace-sf/force-app/main/default/objects/Mensageria__mdt/fields/Prioridade__c.field-meta.xml
<CustomField>
    <fullName>Prioridade__c</fullName>
    <label>Prioridade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>